--- a/app/src/main/res/layout/listview_history.xml
+++ b/app/src/main/res/layout/listview_history.xml
@@ -4,30 +4,29 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:id="@+id/Description"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Date"
+        android:layout_weight=".333"
         android:padding="10dp"
-        android:textAlignment="center"/>
+        android:text="@string/description"
+        />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:id="@+id/Price"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight=".333"
         android:padding="10dp"
-        android:text="Price"
-        android:textAlignment="center"/>
+        android:text="@string/price"
+         />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        android:id="@+id/Date"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight=".333"
         android:padding="10dp"
-        android:layout_weight="1"
-        android:text="Description"
-        android:textAlignment="center"/>
+        android:text="@string/date" />
 
 </LinearLayout>
