--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-smallcaps"
                 android:text=""
                 android:textSize="22dp"
                 android:textStyle="bold"
@@ -99,8 +99,9 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="60dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-smallcaps"
                 android:text=""
+                android:textColor="@color/colorAccent"
                 android:textSize="22dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/Avaliable"
@@ -124,7 +125,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="serif-monospace"
-                android:text="Avaliable"
+                android:text="@string/avaliable"
+
                 android:textSize="22dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +141,7 @@
                 android:layout_margin="10dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-smallcaps"
                 android:text=""
                 android:textColor="@color/colorPrimary"
                 android:textSize="22dp"
