--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="ResetButton"> #c57a6a </color>
+    <color name="NewSession">  #7abcd8  </color>
+    <color name="AllRecords"> #6cb1cf </color>
 </resources>
